--- a/app/src/main/res/layout/phone_call_layout.xml
+++ b/app/src/main/res/layout/phone_call_layout.xml
@@ -186,7 +186,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="<-"
+        android:text="DEL"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.307"
