--- a/app/src/main/res/layout/phone_call_layout.xml
+++ b/app/src/main/res/layout/phone_call_layout.xml
@@ -207,6 +207,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.38"
-        android:background="@null"/>
+        android:background="@null"
+        android:textSize="20dp"/>
 
 </android.support.constraint.ConstraintLayout>
