--- a/app/src/main/res/layout/phone_call_layout.xml
+++ b/app/src/main/res/layout/phone_call_layout.xml
@@ -202,12 +202,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@null"
+        android:textSize="30dp"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/twobtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.38"
-        android:background="@null"
-        android:textSize="20dp"/>
+        app:layout_constraintVertical_bias="0.38" />
 
 </android.support.constraint.ConstraintLayout>
