--- a/app/src/main/res/layout/called_layout.xml
+++ b/app/src/main/res/layout/called_layout.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -21,5 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        />
+        android:text="취소"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20dp"/>
 </LinearLayout>
