add : Connect Firebase init

--- a/app/src/main/res/layout/setting_frgment.xml
+++ b/app/src/main/res/layout/setting_frgment.xml
@@ -45,7 +45,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/helpBtn"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
